--- a/index.html
+++ b/index.html
@@ -22,18 +22,19 @@
     <title>Frontend Mentor | Four card feature section</title>
   </head>
   <body>
-    <section class="container-text">
-      <h1 class="container-text__title">
-        Reliable, efficient delivery
-        <span class="container-text__title-bold"> Powered by Technology </span>
-      </h1>
-      <p class="container-text__paragraph">
-        Our Artificial Intelligence powered tools use millions of project data
-        points to ensure that your project is successful
-      </p>
-    </section>
-    <section class="container-card">
-      <div class="card">
+    <main>
+      <section class="container-text">
+        <h1 class="container-text__title">
+          Reliable, efficient delivery<br>
+          <span class="container-text__title-bold"> Powered by Technology </span>
+        </h1>
+        <p class="container-text__paragraph">
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
+        </p>
+      </section>
+      <section class="container-card">
+        <div class="card">
         <h2 class="card__title">Supervisor</h2>
         <p class="card__text">
           Monitors activity to identify project roadblocks
@@ -62,5 +63,6 @@
         <img src="images/icon-calculator.svg" alt="" class="card__img" />
       </div>
     </section>
+  </main>
   </body>
 </html>
